[Fix] messages overflow

--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,8 @@ body,html {
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow: scroll;
+    height: 95%;
 }
 
 .message {
